    
    HIVE-525. Fix Eclipse classpath by adding Hadoop test jar. 
    (Prasad Chakka via johan)

    HIVE-495. Fix join of a table of ThriftSerDe with complex columns
    (Zheng Shao via namit)

    HIVE-532. Predicates not pushed above limit
    (Prasad Chakka via namit)

    HIVE-534. Fix in the cli so that it does not ignore the first 
    newline character. (Raghotham Murthy via athusoo)

Release 0.3.1 - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-61. Implement "ORDER BY". (Namit Jain via zshao)

    HIVE-376. In strict mode do not allow join without "ON" condition.
    (Namit Jain via zshao)

  IMPROVEMENTS

    HIVE-440. Reducer and Join to print out number of rows processed.
    (Namit Jain via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-416. Fix backtrack in Hive.g. (Namit Jain via zshao)

    HIVE-442. Move the data before creating the partition.
    (Prasad Chakka via zshao)

    HIVE-447. Fix tests on hudson. (Ashish Thusoo via zshao)

    HIVE-469. Fix errors for cases where the partition or the
    table is empty. (Namit Jain via athusoo)

Release 0.3.0 - 2009-04-20

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-337. LazySimpleSerDe to support multi-level nested array, map, struct
    types. (zshao)

    HIVE-313. Add UDF date_add, date_sub, datediff. (zshao)

    HIVE-79. Print number of rows inserted to table(s).
    (Suresh Antony via zshao)

    HIVE-30. Hive Web User Interface. (Edward Capriolo via athusoo)

    HIVE-343. Include py packages for thrift service.
    (Raghotham Murthy via zshao)

    HIVE-299. Include php packages for thrift service.
    (Raghotham Murthy via zshao)

    HIVE-82 Support for building tarballs and javadocs
    (Ashish Thusoo via rmurthy)

  IMPROVEMENTS

    HIVE-132. Show table and describe results to be read via FetchTask.
    (Raghotham Murthy via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-349. Fix TestCliDriver when there are test cases with no tasks.
    (Suresh Antony via zshao)
